[gd_scene load_steps=10 format=4 uid="uid://c640eb6d5fi7a"]

[ext_resource type="Script" uid="uid://cyqyl4ed5ujlw" path="res://scenes/levels/level_battle.gd" id="1_d4bfr"]
[ext_resource type="Texture2D" uid="uid://cd5qr7xr07r6r" path="res://assets/backgrounds/Low_battlebacks_forest.png" id="2_k1ymq"]
[ext_resource type="AudioStream" uid="uid://bp3qemwbmgn20" path="res://assets/audios/Fantasy Vol8 Loria Main.wav" id="3_wuj0f"]
[ext_resource type="PackedScene" uid="uid://glfluus0hekk" path="res://scenes/levels/cell_indicator_battle.tscn" id="4_lxgdc"]
[ext_resource type="PackedScene" uid="uid://2r2qyutmbsd2" path="res://scenes/levels/layer_battle_nav.tscn" id="5_odxcu"]
[ext_resource type="TileSet" uid="uid://c884hvc0bg6ua" path="res://resources/tile_set_hex_battle.tres" id="6_or4fg"]
[ext_resource type="PackedScene" uid="uid://b7i6lo43napfl" path="res://scenes/ui/ui_avatar.tscn" id="7_pd4wd"]
[ext_resource type="PackedScene" uid="uid://t6nau0ubmot8" path="res://scenes/units/unit_skull.tscn" id="8_d4bfr"]
[ext_resource type="PackedScene" uid="uid://bm5m1mow7et3r" path="res://scenes/units/unit_viking.tscn" id="8_k1ymq"]

[node name="LevelBattle" type="Node"]
script = ExtResource("1_d4bfr")
bg_texture = ExtResource("2_k1ymq")
bg_music = ExtResource("3_wuj0f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"BGM"

[node name="Sprite2DBg" type="Sprite2D" parent="."]
offset = Vector2(960, 540)

[node name="Maps" type="Node" parent="."]

[node name="CellIndicatorBattle" parent="Maps" instance=ExtResource("4_lxgdc")]

[node name="LayerBattleNav" parent="Maps" instance=ExtResource("5_odxcu")]
tile_map_data = PackedByteArray("AAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAABAAgAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAACAAgAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAADAAgAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAgAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAgAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAgAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAgAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAAAAkAAgAAAAAAAAABAAkAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAADAAkAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAFAAkAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAoAAgAAAAAAAAAJAAkAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAALAAkAAgAAAAAAAAAAAAYAAgAAAAAAAAABAAUAAgAAAAAAAAADAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAACAAUAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAUAAgAAAAAAAAAHAAUAAgAAAAAAAAAIAAUAAgAAAAAAAAAJAAUAAgAAAAAAAAAKAAUAAgAAAAAAAAALAAUAAgAAAAAAAAA=")
tile_set = ExtResource("6_or4fg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_bottom = 596.0
scale = Vector2(0.5, 0.5)

[node name="UIAvatar1" parent="CanvasLayer/VBoxContainer" instance=ExtResource("7_pd4wd")]
layout_mode = 2

[node name="UIAvatar2" parent="CanvasLayer/VBoxContainer" instance=ExtResource("7_pd4wd")]
layout_mode = 2

[node name="UIAvatar3" parent="CanvasLayer/VBoxContainer" instance=ExtResource("7_pd4wd")]
layout_mode = 2

[node name="UIAvatar4" parent="CanvasLayer/VBoxContainer" instance=ExtResource("7_pd4wd")]
layout_mode = 2

[node name="Units" type="Node2D" parent="."]
y_sort_enabled = true

[node name="UnitSkull" parent="Units" instance=ExtResource("8_d4bfr")]
init_cell = Vector2i(4, 6)

[node name="UnitViking" parent="Units" instance=ExtResource("8_k1ymq")]
init_cell = Vector2i(3, 5)
